--- a/wp-content/themes/aerospace/sass/pages/_data.scss
+++ b/wp-content/themes/aerospace/sass/pages/_data.scss
@@ -65,19 +65,25 @@
 	.archive-pages-bottom {
 		background-color: transparent;
 		padding-top: 0;
+		padding-bottom: calc(#{$archive-content-padding} * 2);
 
 		&::before {
-			top: 0;
+			top: calc(#{$archive-content-padding} + 4px);
+
+			@include breakpoint("small") {
+				top: 0;
+			}
 		}
 	}
 
 	.archive-content {
 		position: relative;
 		padding: 0;
-		margin-bottom: 2rem;
+		margin-bottom: 0;
 
         @include breakpoint("medium") {
             padding: 0 $archive-content-padding-md;
+            margin-bottom: 2rem;
         }
 	}
 
@@ -177,12 +183,19 @@
 	/*----------  Pagination  ----------*/
 	.dataTables_paginate {
 		position: absolute;
-		right: calc(#{$archive-content-padding} + 0.5rem);
-		bottom: -3.9rem;
+		left: calc(#{$archive-content-padding} + 0.5rem);
+		bottom: -3.4rem;
 		z-index: 10;
+
+		@include breakpoint("small") {
+			left: unset;
+			right: calc(#{$archive-content-padding} + 0.5rem);
+			bottom: -1.7rem;
+		}
 
 		@include breakpoint("medium") {
 			right: calc(#{$archive-content-padding-md} + 0.5rem);
+			bottom: -3.9rem;
 		}
 
 		.current {
